fix: quick spacing fix

--- a/src/styles/sass/pages/Questions/_Questions.scss
+++ b/src/styles/sass/pages/Questions/_Questions.scss
@@ -206,7 +206,7 @@
     .questions-container {
         .questions-title {
             padding: 50px 20px!important;
-            justify-content: unset!important;
+            
             
             h1 {
                 font-size: 24px!important;
@@ -244,6 +244,14 @@
         }
 
 
+    }
+}
+
+@media (max-width: 430px) {
+    .questions-container {
+        .questions-title {
+            justify-content: unset!important;
+        }
     }
 }
 
